language/move-lang/tests/move_check/borrows/copy_combo_invalid.exp
error: 

    ┌── tests/move_check/borrows/copy_combo_invalid.move:13:23 ───
    │
 13 │         if (cond) f = &mut s.f else f = &mut other.f;
    │                       -------- It is still being mutably borrowed by this reference
 14 │         copy s;
    │         ^^^^^^ Invalid copy of local 's'
    │

error: 

    ┌── tests/move_check/borrows/copy_combo_invalid.move:22:23 ───
    │
 22 │         if (cond) f = &mut s else f = other;
    │                       ------ It is still being mutably borrowed by this reference
 23 │         copy s;
    │         ^^^^^^ Invalid copy of local 's'
    │

error: 

    ┌── tests/move_check/borrows/copy_combo_invalid.move:31:23 ───
    │
 31 │         if (cond) f = id_mut(&mut s) else f = other;
    │                       -------------- It is still being mutably borrowed by this reference
 32 │         copy s;
    │         ^^^^^^ Invalid copy of local 's'
    │

error: 

    ┌── tests/move_check/borrows/copy_combo_invalid.move:39:17 ───
    │
 39 │         let f = &mut s.f;
    │                 -------- It is still being mutably borrowed by this reference
 40 │         if (cond) { copy s; };
    │                     ^^^^^^ Invalid copy of local 's'
    │

